@@ -2,7 +2,7 @@
 # refractiveindex.info database is in the public domain
 # copyright and related rights waived via CC0 1.0
 
-REFERENCES: "T. Inagaki et al. Optical properties of solid Na and Li between 0.6 and 3.8 eV, <a href=\"https://doi.org/10.1103/PhysRevB.13.2305\"><i>Phs. Rev. B</i> <b>13</b>, 2305-313 (1976)</a>"
+REFERENCES: "T. Inagaki, L. C. Emerson, E. T. Arakawa, M. W. Williams. Optical properties of solid Na and Li between 0.6 and 3.8 eV, <a href=\"https://doi.org/10.1103/PhysRevB.13.2305\"><i>Phs. Rev. B</i> <b>13</b>, 2305-2313 (1976)</a>"
 DATA:
   - type: tabulated nk
     data: |
@@ -39,3 +39,6 @@ DATA:
         1.550 0.436 7.87
         1.771 0.530 8.99
         2.066 0.663 10.50
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
